Fix: certificate overflow width

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -642,7 +642,7 @@ footer .footer-bottom {
     padding: 4px;
     width: 140px;
     position: fixed;
-    right: -100px;
+    right: -105px;
     top: 50px;
     z-index: 1000;
     font: normal normal 10px Arial;
@@ -2179,7 +2179,7 @@ footer .footer-bottom {
             .certificate-preview {
                 .preview-modal {
                     width: 130px;
-                    max-width: 100%;
+                    max-width: 80%;
                     height:100%;
                     height: auto;
                     margin: 10px;
